--- a/uniScraper/scrapy.cfg
+++ b/uniScraper/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = moduleScraper.settings
+default = uniScraper.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = moduleScraper
+project = uniScraper
